# pypa-docs-theme

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
pypa_theme/: __init__.py  theme.conf
pypa_theme/static/: pypa.css
